fixing some passementerie spacing issues

--- a/productview.less
+++ b/productview.less
@@ -160,8 +160,15 @@ button.slide {
   min-height: 0;
   max-height: none;
   margin: 0;
-  padding: 0;
+  padding: 10px 0;
   overflow: visible;
+}
+
+#collection-row-passementerie .passementerie li:first-child {
+  padding-top: 15px;
+}
+#collection-row-passementerie .passementerie li:last-child {
+  padding-bottom: 15px;
 }
 
 .list li:nth-child(3n) {
